fixed the search menu spacing

--- a/css/main.css
+++ b/css/main.css
@@ -133,8 +133,7 @@ p {
 		float: left;
 	}
 	.lang-menu {
-		padding-bottom: 28px;
-		line-height: 0;
+		padding-bottom: 47px;
 	}
 
 	/*****************************
@@ -318,7 +317,7 @@ p {
 	.colored-textbox li:nth-child(3) a {
 		background: url(../images/icons/play.png) 0 50% no-repeat;
 	}
-	
+
 /**************************************************
 		Comverse solutions icons
 **************************************************/
@@ -464,7 +463,7 @@ p {
 		color:  #565656;
 	}
 	.success-icons {			
-		height: 450px;			
+		height: 350px;			
 		padding: 50px 5px 30px;
 	}
 
@@ -483,7 +482,7 @@ p {
 		float: right;
 	}
 	.success-icons ul li {
-		display: inline-block;
+		float: left;
 		border-radius: 2px;
 		background-color:  #ffffff;
 		/*width: 110px;*/
